[package]
name = "overcrowd-raspi"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = { version = "0.17.3", features = ["bluetoothd"] }
tokio = { version = "1.44.1", features =  ["full" ]}
futures = "0.3"
env_logger = "0.11.8"
bitflags = "2.9.0"
num_enum = "0.7.3"
serde = { version = "1", features=["derive", "std"] }
chrono = {version = "0.4.40", features=["now"]}
serde_json = "1.0.140"
